z-index on mobile version fixed

--- a/css/main.css
+++ b/css/main.css
@@ -171,7 +171,7 @@ h6 {
   padding: 10px 0;
   border: none;
   background-color: transparent;
-  z-index: 3;
+  z-index: 2;
   -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   cursor: pointer;
@@ -588,7 +588,7 @@ h6 {
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 1;
+  z-index: 3;
   width: 100vw;
   height: 100vh;
   background-color: rgba(0, 0, 0, 0.5);
