--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -34,7 +34,7 @@
   padding: 10px 0;
   border: none;
   background-color: transparent;
-  z-index: 3;
+  z-index: 2;
   transition: fill $transition;
   cursor: pointer;
 
